fix: modal and burger overflow

--- a/app.scss
+++ b/app.scss
@@ -25,6 +25,7 @@ body {
   overflow-x: hidden;
   width: 100%;
   max-width: 100vw;
+  position: relative;
   &.modal-open {
     overflow: hidden;
     max-height: 100vh;
