--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -27,75 +27,6 @@ header {
     position: relative;
   }
 
-  .mob-nav {
-    display: none;
-    @include lg {
-      display: block;
-      width: 100%;
-      height: 100%;
-
-      min-height: max-content;
-
-      margin-top: 90px;
-
-      @include lg {
-        margin-top: 78px;
-      }
-
-      @include md {
-        margin-top: 74px;
-      }
-      padding: 30px 50px 130px 50px;
-
-      position: absolute;
-      left: -100%;
-      top: 0;
-      z-index: 9999;
-
-      visibility: hidden;
-
-      background-color: #fff;
-      border-top: 1px solid #f3f3f3;
-      -webkit-box-shadow: -13px 11px 8px 1px rgba(34, 60, 80, 0.12);
-      -moz-box-shadow: -13px 11px 8px 1px rgba(34, 60, 80, 0.12);
-      box-shadow: -13px 11px 8px 1px rgba(34, 60, 80, 0.12);
-
-      transition: 0.8s;
-
-      .links-footer {
-        padding-bottom: 30px;
-        height: fit-content;
-      }
-
-      &.active {
-        left: 0;
-        visibility: visible;
-        overflow-y: scroll;
-        min-height: max-content;
-
-        // @include responsive(500) {
-        //   min-height: 100vh;
-        // }
-      }
-    }
-  }
-
-  .nav-wrapper {
-    display: grid;
-    align-items: flex-start;
-    grid-template-columns: 300px 200px;
-    gap: 12px;
-
-    margin-bottom: 16px;
-
-    @include responsive(480) {
-      display: flex;
-
-      flex-direction: column;
-      justify-content: flex-start;
-    }
-  }
-
   & .header-nav {
     display: flex;
     justify-content: center;
@@ -187,5 +118,66 @@ header {
         display: none;
       }
     }
+  }
+}
+
+.mob-nav {
+  display: none;
+  @include lg {
+    overflow-y: scroll;
+
+    display: block;
+    width: 100%;
+    height: 100vh;
+
+    position: fixed;
+    left: 0;
+    top: 0;
+    inset: 0;
+    z-index: 9999;
+    transform: translateX(-100%);
+    margin-top: 90px;
+    padding: 30px 50px 130px 50px;
+
+    transition: 0.8s;
+
+    @include lg {
+      margin-top: 78px;
+    }
+
+    @include md {
+      margin-top: 74px;
+    }
+
+    background-color: #fff;
+    border-top: 1px solid #f3f3f3;
+    -webkit-box-shadow: -13px 11px 8px 1px rgba(34, 60, 80, 0.12);
+    -moz-box-shadow: -13px 11px 8px 1px rgba(34, 60, 80, 0.12);
+    box-shadow: -13px 11px 8px 1px rgba(34, 60, 80, 0.12);
+
+    .links-footer {
+      padding-bottom: 30px;
+      height: fit-content;
+    }
+
+    &.active {
+      transform: translateX(0);
+    }
+  }
+}
+
+.nav-wrapper {
+  display: grid;
+  align-items: flex-start;
+  grid-template-columns: 300px 200px;
+  gap: 12px;
+
+  margin-bottom: 16px;
+
+  @include responsive(480) {
+    display: flex;
+
+    flex-direction: column;
+    justify-content: flex-start;
   }
 }
