--- a/components/ModalWindow/ModalWindow.scss
+++ b/components/ModalWindow/ModalWindow.scss
@@ -20,6 +20,10 @@
 .modal-container {
   width: 100%;
   max-width: 634px;
+
+  height: 100vh;
+  max-height: 609px;
+
   margin: 0px auto;
   padding: 40px;
   background-color: #fff;
